Move pdfTeX primitives to \tex_... namespace

--- a/l3kernel/expl3.dtx
+++ b/l3kernel/expl3.dtx
@@ -1732,8 +1732,8 @@
     { xdvipdfmx }
     {
       \bool_lazy_and:nnTF
-        { \cs_if_exist_p:N  \pdftex_pdfoutput:D }
-        { \int_compare_p:nNn \pdftex_pdfoutput:D > 0 }
+        { \cs_if_exist_p:N  \tex_pdfoutput:D }
+        { \int_compare_p:nNn \tex_pdfoutput:D > 0 }
         { pdfmode }
         { dvips }
     }
