--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -1297,8 +1297,8 @@
 %    \begin{macrocode}
 \cs_new_protected:Npx \mode_leave_vertical:
   {
-    \cs_if_exist:NTF \pdftex_quitvmode:D
-      { \pdftex_quitvmode:D }
+    \cs_if_exist:NTF \tex_quitvmode:D
+      { \tex_quitvmode:D }
       {
         \exp_not:n
           {
@@ -2002,7 +2002,7 @@
         \file_get_full_name:nN {#1} \l_@@_full_name_str
         \tl_set:Nx #2
           {
-            \pdftex_mdfivesum:D file \exp_after:wN
+            \tex_mdfivesum:D file \exp_after:wN
               { \l_@@_full_name_str }
           }
       }
@@ -2440,7 +2440,7 @@
 %   possible seeds ($13!>2^{28}$) so the question of uniformity is
 %   somewhat moot.
 %    \begin{macrocode}
-\cs_if_exist:NTF \pdftex_uniformdeviate:D
+\cs_if_exist:NTF \tex_uniformdeviate:D
   {
     \int_new:N \l_@@_internal_a_int
     \int_new:N \l_@@_internal_b_int
@@ -2471,7 +2471,7 @@
       {
         \int_incr:N \l_@@_internal_a_int
         \int_set:Nn \l_@@_internal_b_int
-          { 1 + \pdftex_uniformdeviate:D \l_@@_internal_a_int }
+          { 1 + \tex_uniformdeviate:D \l_@@_internal_a_int }
         \tex_toks:D \l_@@_internal_a_int
           = \tex_toks:D \l_@@_internal_b_int
         \tex_toks:D \l_@@_internal_b_int
@@ -2534,15 +2534,15 @@
 %   Currently, randomness exists under \pdfTeX{}, \LuaTeX{}, \pTeX{} and \upTeX{}.
 %    \begin{macrocode}
 \@@_const:nn { sys_if_rand_exist }
-  { \cs_if_exist_p:N \pdftex_uniformdeviate:D }
+  { \cs_if_exist_p:N \tex_uniformdeviate:D }
 %    \end{macrocode}
 % \end{macro}
 %
 % \begin{macro}[EXP]{\sys_rand_seed:}
 %   Unpack the primitive.
 %    \begin{macrocode}
-\cs_new:Npn \sys_rand_seed: { \tex_the:D \pdftex_randomseed:D }
-\cs_if_exist:NF \pdftex_randomseed:D
+\cs_new:Npn \sys_rand_seed: { \tex_the:D \tex_randomseed:D }
+\cs_if_exist:NF \tex_randomseed:D
   { \cs_set:Npn \sys_rand_seed: { 0 } }
 %    \end{macrocode}
 % \end{macro}
@@ -2551,7 +2551,7 @@
 %   The primitive always assigns the seed globally.
 %    \begin{macrocode}
 \cs_new_protected:Npn \sys_gset_rand_seed:n #1
-  { \pdftex_setrandomseed:D \int_eval:n {#1} \exp_stop_f: }
+  { \tex_setrandomseed:D \int_eval:n {#1} \exp_stop_f: }
 %    \end{macrocode}
 % \end{macro}
 %
@@ -2566,7 +2566,7 @@
           { tex.sprint(status.shell_escape~or~os.execute()) }
       }
       {
-        \pdftex_shellescape:D
+        \tex_shellescape:D
       }
   }
 %    \end{macrocode}
