--- a/l3kernel/l3names.dtx
+++ b/l3kernel/l3names.dtx
@@ -65,8 +65,8 @@
 % the primitives. These are named based on the engine which first introduced
 % them:
 % \begin{itemize}
-%   \item[{\cs[no-index]{tex_\ldots}}] Introduced by \TeX{} and \eTeX{};
-%   \item[{\cs[no-index]{pdftex_\ldots}}] Introduced by \pdfTeX{};
+%   \item[{\cs[no-index]{tex_\ldots}}] Introduced by \TeX{}, \eTeX{}
+%     and \pdfTeX{};
 %   \item[{\cs[no-index]{xetex_\ldots}}] Introduced by \XeTeX{};
 %   \item[{\cs[no-index]{luatex_\ldots}}] Introduced by \LuaTeX{};
 %   \item[{\cs[no-index]{utex_\ldots}}] Introduced by \XeTeX{} and \LuaTeX{};
@@ -533,148 +533,144 @@
   \@@_primitive:NN \unless                \tex_unless:D
   \@@_primitive:NN \widowpenalties        \tex_widowpenalties:D
 %    \end{macrocode}
-% The newer primitives are more complex: there are an awful lot of them,
-% and we don't use them all at the moment. So the following is selective,
-% based on those also available in \LuaTeX{} or used in \pkg{expl3}.
-% In the case of the \pdfTeX{} primitives, we retain |pdf| at the start
-% of the names \emph{only} for directly PDF-related primitives, as
-% there are a lot of \pdfTeX{} primitives that start \cs[no-index]{pdf\ldots} but
-% are not related to PDF output. These ones related to PDF output or only
-% work in PDF mode.
+% Post-\eTeX{} primitives do not always end up with the same name in all
+% engines, if indeed they are available cross-engine anyway. We therefore
+% take the approach of preferring the shortest name that makes sense. First,
+% we deal with the primitives introduced by \pdfTeX{} which directly
+% relate to PDF output: these are copied with the names unchanged.
 %    \begin{macrocode}
-  \@@_primitive:NN \pdfannot              \pdftex_pdfannot:D
-  \@@_primitive:NN \pdfcatalog            \pdftex_pdfcatalog:D
-  \@@_primitive:NN \pdfcompresslevel      \pdftex_pdfcompresslevel:D
-  \@@_primitive:NN \pdfcolorstack         \pdftex_pdfcolorstack:D
-  \@@_primitive:NN \pdfcolorstackinit     \pdftex_pdfcolorstackinit:D
-  \@@_primitive:NN \pdfcreationdate       \pdftex_pdfcreationdate:D
-  \@@_primitive:NN \pdfdecimaldigits      \pdftex_pdfdecimaldigits:D
-  \@@_primitive:NN \pdfdest               \pdftex_pdfdest:D
-  \@@_primitive:NN \pdfdestmargin         \pdftex_pdfdestmargin:D
-  \@@_primitive:NN \pdfendlink            \pdftex_pdfendlink:D
-  \@@_primitive:NN \pdfendthread          \pdftex_pdfendthread:D
-  \@@_primitive:NN \pdffontattr           \pdftex_pdffontattr:D
-  \@@_primitive:NN \pdffontname           \pdftex_pdffontname:D
-  \@@_primitive:NN \pdffontobjnum         \pdftex_pdffontobjnum:D
-  \@@_primitive:NN \pdfgamma              \pdftex_pdfgamma:D
-  \@@_primitive:NN \pdfimageapplygamma    \pdftex_pdfimageapplygamma:D
-  \@@_primitive:NN \pdfimagegamma         \pdftex_pdfimagegamma:D
-  \@@_primitive:NN \pdfgentounicode       \pdftex_pdfgentounicode:D
-  \@@_primitive:NN \pdfglyphtounicode     \pdftex_pdfglyphtounicode:D
-  \@@_primitive:NN \pdfhorigin            \pdftex_pdfhorigin:D
-  \@@_primitive:NN \pdfimagehicolor       \pdftex_pdfimagehicolor:D
-  \@@_primitive:NN \pdfimageresolution    \pdftex_pdfimageresolution:D
-  \@@_primitive:NN \pdfincludechars       \pdftex_pdfincludechars:D
-  \@@_primitive:NN \pdfinclusioncopyfonts
-    \pdftex_pdfinclusioncopyfonts:D
+  \@@_primitive:NN \pdfannot              \tex_pdfannot:D
+  \@@_primitive:NN \pdfcatalog            \tex_pdfcatalog:D
+  \@@_primitive:NN \pdfcompresslevel      \tex_pdfcompresslevel:D
+  \@@_primitive:NN \pdfcolorstack         \tex_pdfcolorstack:D
+  \@@_primitive:NN \pdfcolorstackinit     \tex_pdfcolorstackinit:D
+  \@@_primitive:NN \pdfcreationdate       \tex_pdfcreationdate:D
+  \@@_primitive:NN \pdfdecimaldigits      \tex_pdfdecimaldigits:D
+  \@@_primitive:NN \pdfdest               \tex_pdfdest:D
+  \@@_primitive:NN \pdfdestmargin         \tex_pdfdestmargin:D
+  \@@_primitive:NN \pdfendlink            \tex_pdfendlink:D
+  \@@_primitive:NN \pdfendthread          \tex_pdfendthread:D
+  \@@_primitive:NN \pdffontattr           \tex_pdffontattr:D
+  \@@_primitive:NN \pdffontname           \tex_pdffontname:D
+  \@@_primitive:NN \pdffontobjnum         \tex_pdffontobjnum:D
+  \@@_primitive:NN \pdfgamma              \tex_pdfgamma:D
+  \@@_primitive:NN \pdfimageapplygamma    \tex_pdfimageapplygamma:D
+  \@@_primitive:NN \pdfimagegamma         \tex_pdfimagegamma:D
+  \@@_primitive:NN \pdfgentounicode       \tex_pdfgentounicode:D
+  \@@_primitive:NN \pdfglyphtounicode     \tex_pdfglyphtounicode:D
+  \@@_primitive:NN \pdfhorigin            \tex_pdfhorigin:D
+  \@@_primitive:NN \pdfimagehicolor       \tex_pdfimagehicolor:D
+  \@@_primitive:NN \pdfimageresolution    \tex_pdfimageresolution:D
+  \@@_primitive:NN \pdfincludechars       \tex_pdfincludechars:D
+  \@@_primitive:NN \pdfinclusioncopyfonts \tex_pdfinclusioncopyfonts:D
   \@@_primitive:NN \pdfinclusionerrorlevel
-    \pdftex_pdfinclusionerrorlevel:D
-  \@@_primitive:NN \pdfinfo               \pdftex_pdfinfo:D
-  \@@_primitive:NN \pdflastannot          \pdftex_pdflastannot:D
-  \@@_primitive:NN \pdflastlink           \pdftex_pdflastlink:D
-  \@@_primitive:NN \pdflastobj            \pdftex_pdflastobj:D
-  \@@_primitive:NN \pdflastxform          \pdftex_pdflastxform:D
-  \@@_primitive:NN \pdflastximage         \pdftex_pdflastximage:D
+    \tex_pdfinclusionerrorlevel:D
+  \@@_primitive:NN \pdfinfo               \tex_pdfinfo:D
+  \@@_primitive:NN \pdflastannot          \tex_pdflastannot:D
+  \@@_primitive:NN \pdflastlink           \tex_pdflastlink:D
+  \@@_primitive:NN \pdflastobj            \tex_pdflastobj:D
+  \@@_primitive:NN \pdflastxform          \tex_pdflastxform:D
+  \@@_primitive:NN \pdflastximage         \tex_pdflastximage:D
   \@@_primitive:NN \pdflastximagecolordepth
-    \pdftex_pdflastximagecolordepth:D
-  \@@_primitive:NN \pdflastximagepages    \pdftex_pdflastximagepages:D
-  \@@_primitive:NN \pdflinkmargin         \pdftex_pdflinkmargin:D
-  \@@_primitive:NN \pdfliteral            \pdftex_pdfliteral:D
-  \@@_primitive:NN \pdfminorversion       \pdftex_pdfminorversion:D
-  \@@_primitive:NN \pdfnames              \pdftex_pdfnames:D
-  \@@_primitive:NN \pdfobj                \pdftex_pdfobj:D
-  \@@_primitive:NN \pdfobjcompresslevel
-    \pdftex_pdfobjcompresslevel:D
-  \@@_primitive:NN \pdfoutline            \pdftex_pdfoutline:D
-  \@@_primitive:NN \pdfoutput             \pdftex_pdfoutput:D
-  \@@_primitive:NN \pdfpageattr           \pdftex_pdfpageattr:D
-  \@@_primitive:NN \pdfpagebox            \pdftex_pdfpagebox:D
-  \@@_primitive:NN \pdfpageref            \pdftex_pdfpageref:D
-  \@@_primitive:NN \pdfpageresources      \pdftex_pdfpageresources:D
-  \@@_primitive:NN \pdfpagesattr          \pdftex_pdfpagesattr:D
-  \@@_primitive:NN \pdfrefobj             \pdftex_pdfrefobj:D
-  \@@_primitive:NN \pdfrefxform           \pdftex_pdfrefxform:D
-  \@@_primitive:NN \pdfrefximage          \pdftex_pdfrefximage:D
-  \@@_primitive:NN \pdfrestore            \pdftex_pdfrestore:D
-  \@@_primitive:NN \pdfretval             \pdftex_pdfretval:D
-  \@@_primitive:NN \pdfsave               \pdftex_pdfsave:D
-  \@@_primitive:NN \pdfsetmatrix          \pdftex_pdfsetmatrix:D
-  \@@_primitive:NN \pdfstartlink          \pdftex_pdfstartlink:D
-  \@@_primitive:NN \pdfstartthread        \pdftex_pdfstartthread:D
-  \@@_primitive:NN \pdfsuppressptexinfo
-    \pdftex_pdfsuppressptexinfo:D
-  \@@_primitive:NN \pdfthread             \pdftex_pdfthread:D
-  \@@_primitive:NN \pdfthreadmargin       \pdftex_pdfthreadmargin:D
-  \@@_primitive:NN \pdftrailer            \pdftex_pdftrailer:D
-  \@@_primitive:NN \pdfuniqueresname      \pdftex_pdfuniqueresname:D
-  \@@_primitive:NN \pdfvorigin            \pdftex_pdfvorigin:D
-  \@@_primitive:NN \pdfxform              \pdftex_pdfxform:D
-  \@@_primitive:NN \pdfxformattr          \pdftex_pdfxformattr:D
-  \@@_primitive:NN \pdfxformname          \pdftex_pdfxformname:D
-  \@@_primitive:NN \pdfxformresources     \pdftex_pdfxformresources:D
-  \@@_primitive:NN \pdfximage             \pdftex_pdfximage:D
-  \@@_primitive:NN \pdfximagebbox         \pdftex_pdfximagebbox:D
+    \tex_pdflastximagecolordepth:D
+  \@@_primitive:NN \pdflastximagepages    \tex_pdflastximagepages:D
+  \@@_primitive:NN \pdflinkmargin         \tex_pdflinkmargin:D
+  \@@_primitive:NN \pdfliteral            \tex_pdfliteral:D
+  \@@_primitive:NN \pdfminorversion       \tex_pdfminorversion:D
+  \@@_primitive:NN \pdfnames              \tex_pdfnames:D
+  \@@_primitive:NN \pdfobj                \tex_pdfobj:D
+  \@@_primitive:NN \pdfobjcompresslevel   \tex_pdfobjcompresslevel:D
+  \@@_primitive:NN \pdfoutline            \tex_pdfoutline:D
+  \@@_primitive:NN \pdfoutput             \tex_pdfoutput:D
+  \@@_primitive:NN \pdfpageattr           \tex_pdfpageattr:D
+  \@@_primitive:NN \pdfpagebox            \tex_pdfpagebox:D
+  \@@_primitive:NN \pdfpageref            \tex_pdfpageref:D
+  \@@_primitive:NN \pdfpageresources      \tex_pdfpageresources:D
+  \@@_primitive:NN \pdfpagesattr          \tex_pdfpagesattr:D
+  \@@_primitive:NN \pdfrefobj             \tex_pdfrefobj:D
+  \@@_primitive:NN \pdfrefxform           \tex_pdfrefxform:D
+  \@@_primitive:NN \pdfrefximage          \tex_pdfrefximage:D
+  \@@_primitive:NN \pdfrestore            \tex_pdfrestore:D
+  \@@_primitive:NN \pdfretval             \tex_pdfretval:D
+  \@@_primitive:NN \pdfsave               \tex_pdfsave:D
+  \@@_primitive:NN \pdfsetmatrix          \tex_pdfsetmatrix:D
+  \@@_primitive:NN \pdfstartlink          \tex_pdfstartlink:D
+  \@@_primitive:NN \pdfstartthread        \tex_pdfstartthread:D
+  \@@_primitive:NN \pdfsuppressptexinfo   \tex_pdfsuppressptexinfo:D
+  \@@_primitive:NN \pdfthread             \tex_pdfthread:D
+  \@@_primitive:NN \pdfthreadmargin       \tex_pdfthreadmargin:D
+  \@@_primitive:NN \pdftrailer            \tex_pdftrailer:D
+  \@@_primitive:NN \pdfuniqueresname      \tex_pdfuniqueresname:D
+  \@@_primitive:NN \pdfvorigin            \tex_pdfvorigin:D
+  \@@_primitive:NN \pdfxform              \tex_pdfxform:D
+  \@@_primitive:NN \pdfxformattr          \tex_pdfxformattr:D
+  \@@_primitive:NN \pdfxformname          \tex_pdfxformname:D
+  \@@_primitive:NN \pdfxformresources     \tex_pdfxformresources:D
+  \@@_primitive:NN \pdfximage             \tex_pdfximage:D
+  \@@_primitive:NN \pdfximagebbox         \tex_pdfximagebbox:D
 %    \end{macrocode}
-% While these are not.
+% These are not related to PDF output and either already appear in other
+% engines without the |\pdf| prefix, or might reasonably do so at some
+% future stage. We therefore drop the leading |pdf| here.
 %    \begin{macrocode}
-  \@@_primitive:NN \ifpdfabsdim           \pdftex_ifabsdim:D
-  \@@_primitive:NN \ifpdfabsnum           \pdftex_ifabsnum:D
-  \@@_primitive:NN \ifpdfprimitive        \pdftex_ifprimitive:D
-  \@@_primitive:NN \pdfadjustspacing      \pdftex_adjustspacing:D
-  \@@_primitive:NN \pdfcopyfont           \pdftex_copyfont:D
-  \@@_primitive:NN \pdfdraftmode          \pdftex_draftmode:D
-  \@@_primitive:NN \pdfeachlinedepth      \pdftex_eachlinedepth:D
-  \@@_primitive:NN \pdfeachlineheight     \pdftex_eachlineheight:D
-  \@@_primitive:NN \pdffilemoddate        \pdftex_filemoddate:D
-  \@@_primitive:NN \pdffilesize           \pdftex_filesize:D
-  \@@_primitive:NN \pdffirstlineheight    \pdftex_firstlineheight:D
-  \@@_primitive:NN \pdffontexpand         \pdftex_fontexpand:D
-  \@@_primitive:NN \pdffontsize           \pdftex_fontsize:D
-  \@@_primitive:NN \pdfignoreddimen       \pdftex_ignoreddimen:D
-  \@@_primitive:NN \pdfinsertht           \pdftex_insertht:D
-  \@@_primitive:NN \pdflastlinedepth      \pdftex_lastlinedepth:D
-  \@@_primitive:NN \pdflastxpos           \pdftex_lastxpos:D
-  \@@_primitive:NN \pdflastypos           \pdftex_lastypos:D
-  \@@_primitive:NN \pdfmapfile            \pdftex_mapfile:D
-  \@@_primitive:NN \pdfmapline            \pdftex_mapline:D
-  \@@_primitive:NN \pdfmdfivesum          \pdftex_mdfivesum:D
-  \@@_primitive:NN \pdfnoligatures        \pdftex_noligatures:D
-  \@@_primitive:NN \pdfnormaldeviate      \pdftex_normaldeviate:D
-  \@@_primitive:NN \pdfpageheight         \pdftex_pageheight:D
-  \@@_primitive:NN \pdfpagewidth          \pdftex_pagewidth:D
-  \@@_primitive:NN \pdfpkmode             \pdftex_pkmode:D
-  \@@_primitive:NN \pdfpkresolution       \pdftex_pkresolution:D
-  \@@_primitive:NN \pdfprimitive          \pdftex_primitive:D
-  \@@_primitive:NN \pdfprotrudechars      \pdftex_protrudechars:D
-  \@@_primitive:NN \pdfpxdimen            \pdftex_pxdimen:D
-  \@@_primitive:NN \pdfrandomseed         \pdftex_randomseed:D
-  \@@_primitive:NN \pdfsavepos            \pdftex_savepos:D
-  \@@_primitive:NN \pdfstrcmp             \pdftex_strcmp:D
-  \@@_primitive:NN \pdfsetrandomseed      \pdftex_setrandomseed:D
-  \@@_primitive:NN \pdfshellescape        \pdftex_shellescape:D
-  \@@_primitive:NN \pdftracingfonts       \pdftex_tracingfonts:D
-  \@@_primitive:NN \pdfuniformdeviate     \pdftex_uniformdeviate:D
+  \@@_primitive:NN \ifpdfabsdim           \tex_ifabsdim:D
+  \@@_primitive:NN \ifpdfabsnum           \tex_ifabsnum:D
+  \@@_primitive:NN \ifpdfprimitive        \tex_ifprimitive:D
+  \@@_primitive:NN \pdfadjustspacing      \tex_adjustspacing:D
+  \@@_primitive:NN \pdfcopyfont           \tex_copyfont:D
+  \@@_primitive:NN \pdfdraftmode          \tex_draftmode:D
+  \@@_primitive:NN \pdfeachlinedepth      \tex_eachlinedepth:D
+  \@@_primitive:NN \pdfeachlineheight     \tex_eachlineheight:D
+  \@@_primitive:NN \pdffilemoddate        \tex_filemoddate:D
+  \@@_primitive:NN \pdffilesize           \tex_filesize:D
+  \@@_primitive:NN \pdffirstlineheight    \tex_firstlineheight:D
+  \@@_primitive:NN \pdffontexpand         \tex_fontexpand:D
+  \@@_primitive:NN \pdffontsize           \tex_fontsize:D
+  \@@_primitive:NN \pdfignoreddimen       \tex_ignoreddimen:D
+  \@@_primitive:NN \pdfinsertht           \tex_insertht:D
+  \@@_primitive:NN \pdflastlinedepth      \tex_lastlinedepth:D
+  \@@_primitive:NN \pdflastxpos           \tex_lastxpos:D
+  \@@_primitive:NN \pdflastypos           \tex_lastypos:D
+  \@@_primitive:NN \pdfmapfile            \tex_mapfile:D
+  \@@_primitive:NN \pdfmapline            \tex_mapline:D
+  \@@_primitive:NN \pdfmdfivesum          \tex_mdfivesum:D
+  \@@_primitive:NN \pdfnoligatures        \tex_noligatures:D
+  \@@_primitive:NN \pdfnormaldeviate      \tex_normaldeviate:D
+  \@@_primitive:NN \pdfpageheight         \tex_pageheight:D
+  \@@_primitive:NN \pdfpagewidth          \tex_pagewidth:D
+  \@@_primitive:NN \pdfpkmode             \tex_pkmode:D
+  \@@_primitive:NN \pdfpkresolution       \tex_pkresolution:D
+  \@@_primitive:NN \pdfprimitive          \tex_primitive:D
+  \@@_primitive:NN \pdfprotrudechars      \tex_protrudechars:D
+  \@@_primitive:NN \pdfpxdimen            \tex_pxdimen:D
+  \@@_primitive:NN \pdfrandomseed         \tex_randomseed:D
+  \@@_primitive:NN \pdfsavepos            \tex_savepos:D
+  \@@_primitive:NN \pdfstrcmp             \tex_strcmp:D
+  \@@_primitive:NN \pdfsetrandomseed      \tex_setrandomseed:D
+  \@@_primitive:NN \pdfshellescape        \tex_shellescape:D
+  \@@_primitive:NN \pdftracingfonts       \tex_tracingfonts:D
+  \@@_primitive:NN \pdfuniformdeviate     \tex_uniformdeviate:D
 %    \end{macrocode}
-% The version primitives are not related to PDF mode but are related to
-% \pdfTeX{} so retain the full prefix.
+% The version primitives are not related to PDF mode but are
+% \pdfTeX{}-specific, so again are carried forward unchanged.
 %    \begin{macrocode}
-  \@@_primitive:NN \pdftexbanner          \pdftex_pdftexbanner:D
-  \@@_primitive:NN \pdftexrevision        \pdftex_pdftexrevision:D
-  \@@_primitive:NN \pdftexversion         \pdftex_pdftexversion:D
+  \@@_primitive:NN \pdftexbanner          \tex_pdftexbanner:D
+  \@@_primitive:NN \pdftexrevision        \tex_pdftexrevision:D
+  \@@_primitive:NN \pdftexversion         \tex_pdftexversion:D
 %    \end{macrocode}
-% These ones appear in \pdfTeX{} but don't have |pdf| in the name at all.
-% (\tn{synctex} is odd as it's really not from \pdfTeX{} but from SyncTeX!)
+% These ones appear in \pdfTeX{} but don't have |pdf| in the name at all:
+% no decisions to make.
 %    \begin{macrocode}
-  \@@_primitive:NN \efcode                \pdftex_efcode:D
-  \@@_primitive:NN \ifincsname            \pdftex_ifincsname:D
-  \@@_primitive:NN \leftmarginkern        \pdftex_leftmarginkern:D
-  \@@_primitive:NN \letterspacefont       \pdftex_letterspacefont:D
-  \@@_primitive:NN \lpcode                \pdftex_lpcode:D
-  \@@_primitive:NN \quitvmode             \pdftex_quitvmode:D
-  \@@_primitive:NN \rightmarginkern       \pdftex_rightmarginkern:D
-  \@@_primitive:NN \rpcode                \pdftex_rpcode:D
-  \@@_primitive:NN \synctex               \pdftex_synctex:D
-  \@@_primitive:NN \tagcode               \pdftex_tagcode:D
+  \@@_primitive:NN \efcode                \tex_efcode:D
+  \@@_primitive:NN \ifincsname            \tex_ifincsname:D
+  \@@_primitive:NN \leftmarginkern        \tex_leftmarginkern:D
+  \@@_primitive:NN \letterspacefont       \tex_letterspacefont:D
+  \@@_primitive:NN \lpcode                \tex_lpcode:D
+  \@@_primitive:NN \quitvmode             \tex_quitvmode:D
+  \@@_primitive:NN \rightmarginkern       \tex_rightmarginkern:D
+  \@@_primitive:NN \rpcode                \tex_rpcode:D
+  \@@_primitive:NN \synctex               \tex_synctex:D
+  \@@_primitive:NN \tagcode               \tex_tagcode:D
 %    \end{macrocode}
 % Post \pdfTeX{} primitive availability gets more complex. Both \XeTeX{} and
 % \LuaTeX{} have varying names for some primitives from \pdfTeX{}. Particularly
@@ -771,10 +767,10 @@
 % Primitives from \pdfTeX{} that \XeTeX{} renames: also helps with
 % \LuaTeX{}.
 %    \begin{macrocode}
-  \@@_primitive:NN \mdfivesum             \pdftex_mdfivesum:D
-  \@@_primitive:NN \ifprimitive           \pdftex_ifprimitive:D
-  \@@_primitive:NN \primitive             \pdftex_primitive:D
-  \@@_primitive:NN \shellescape           \pdftex_shellescape:D
+  \@@_primitive:NN \mdfivesum             \tex_mdfivesum:D
+  \@@_primitive:NN \ifprimitive           \tex_ifprimitive:D
+  \@@_primitive:NN \primitive             \tex_primitive:D
+  \@@_primitive:NN \shellescape           \tex_shellescape:D
 %    \end{macrocode}
 % Primitives from \LuaTeX{}, some of which have been ported back to
 % \XeTeX{}. Notice that \tn{expanded} was intended for \pdfTeX{}~1.50 but
@@ -902,38 +898,37 @@
 %    \end{macrocode}
 % Primitives from \pdfTeX{} that \LuaTeX{} renames.
 %    \begin{macrocode}
-  \@@_primitive:NN \adjustspacing         \pdftex_adjustspacing:D
-  \@@_primitive:NN \copyfont              \pdftex_copyfont:D
-  \@@_primitive:NN \draftmode             \pdftex_draftmode:D
-  \@@_primitive:NN \expandglyphsinfont    \pdftex_fontexpand:D
-  \@@_primitive:NN \ifabsdim              \pdftex_ifabsdim:D
-  \@@_primitive:NN \ifabsnum              \pdftex_ifabsnum:D
-  \@@_primitive:NN \ignoreligaturesinfont
-    \pdftex_ignoreligaturesinfont:D
-  \@@_primitive:NN \insertht              \pdftex_insertht:D
+  \@@_primitive:NN \adjustspacing         \tex_adjustspacing:D
+  \@@_primitive:NN \copyfont              \tex_copyfont:D
+  \@@_primitive:NN \draftmode             \tex_draftmode:D
+  \@@_primitive:NN \expandglyphsinfont    \tex_fontexpand:D
+  \@@_primitive:NN \ifabsdim              \tex_ifabsdim:D
+  \@@_primitive:NN \ifabsnum              \tex_ifabsnum:D
+  \@@_primitive:NN \ignoreligaturesinfont \tex_ignoreligaturesinfont:D
+  \@@_primitive:NN \insertht              \tex_insertht:D
   \@@_primitive:NN \lastsavedboxresourceindex
-    \pdftex_pdflastxform:D
+    \tex_pdflastxform:D
   \@@_primitive:NN \lastsavedimageresourceindex
-    \pdftex_pdflastximage:D
+    \tex_pdflastximage:D
   \@@_primitive:NN \lastsavedimageresourcepages
-    \pdftex_pdflastximagepages:D
-  \@@_primitive:NN \lastxpos              \pdftex_lastxpos:D
-  \@@_primitive:NN \lastypos              \pdftex_lastypos:D
-  \@@_primitive:NN \normaldeviate         \pdftex_normaldeviate:D
-  \@@_primitive:NN \outputmode            \pdftex_pdfoutput:D
-  \@@_primitive:NN \pageheight            \pdftex_pageheight:D
-  \@@_primitive:NN \pagewidth             \pdftex_pagewith:D
-  \@@_primitive:NN \protrudechars         \pdftex_protrudechars:D
-  \@@_primitive:NN \pxdimen               \pdftex_pxdimen:D
-  \@@_primitive:NN \randomseed            \pdftex_randomseed:D
-  \@@_primitive:NN \useboxresource        \pdftex_pdfrefxform:D
-  \@@_primitive:NN \useimageresource      \pdftex_pdfrefximage:D
-  \@@_primitive:NN \savepos               \pdftex_savepos:D
-  \@@_primitive:NN \saveboxresource       \pdftex_pdfxform:D
-  \@@_primitive:NN \saveimageresource     \pdftex_pdfximage:D
-  \@@_primitive:NN \setrandomseed         \pdftex_setrandomseed:D
-  \@@_primitive:NN \tracingfonts          \pdftex_tracingfonts:D
-  \@@_primitive:NN \uniformdeviate        \pdftex_uniformdeviate:D
+    \tex_pdflastximagepages:D
+  \@@_primitive:NN \lastxpos              \tex_lastxpos:D
+  \@@_primitive:NN \lastypos              \tex_lastypos:D
+  \@@_primitive:NN \normaldeviate         \tex_normaldeviate:D
+  \@@_primitive:NN \outputmode            \tex_pdfoutput:D
+  \@@_primitive:NN \pageheight            \tex_pageheight:D
+  \@@_primitive:NN \pagewidth             \tex_pagewith:D
+  \@@_primitive:NN \protrudechars         \tex_protrudechars:D
+  \@@_primitive:NN \pxdimen               \tex_pxdimen:D
+  \@@_primitive:NN \randomseed            \tex_randomseed:D
+  \@@_primitive:NN \useboxresource        \tex_pdfrefxform:D
+  \@@_primitive:NN \useimageresource      \tex_pdfrefximage:D
+  \@@_primitive:NN \savepos               \tex_savepos:D
+  \@@_primitive:NN \saveboxresource       \tex_pdfxform:D
+  \@@_primitive:NN \saveimageresource     \tex_pdfximage:D
+  \@@_primitive:NN \setrandomseed         \tex_setrandomseed:D
+  \@@_primitive:NN \tracingfonts          \tex_tracingfonts:D
+  \@@_primitive:NN \uniformdeviate        \tex_uniformdeviate:D
 %    \end{macrocode}
 % The set of Unicode math primitives were introduced by \XeTeX{} and \LuaTeX{}
 % in a somewhat complex fashion: a few first as |\XeTeX...| which were then
@@ -1240,13 +1235,13 @@
 % \pkg{fontspec}. (We follow the usual kernel convention that |@@| is used
 % for saved primitives.)
 %   \begin{macrocode}
-  \tex_let:D \pdftex_tracingfonts:D \tex_undefined:D
+  \tex_let:D \tex_tracingfonts:D \tex_undefined:D
   \tex_ifdefined:D \pdftracingfonts
-    \tex_let:D \pdftex_tracingfonts:D \pdftracingfonts
+    \tex_let:D \tex_tracingfonts:D \pdftracingfonts
   \tex_else:D
     \tex_ifdefined:D \luatex_directlua:D
       \luatex_directlua:D { tex.enableprimitives("@@@@", {"tracingfonts"}) }
-      \tex_let:D \pdftex_tracingfonts:D \luatextracingfonts
+      \tex_let:D \tex_tracingfonts:D \luatextracingfonts
     \tex_fi:D
   \tex_fi:D
 \tex_fi:D
@@ -1309,9 +1304,9 @@
   \tex_let:D \luatex_mathdir:D             \luatexmathdir
   \tex_let:D \luatex_pagebottomoffset:D    \luatexpagebottomoffset
   \tex_let:D \luatex_pagedir:D             \luatexpagedir
-  \tex_let:D \pdftex_pageheight:D          \luatexpageheight
+  \tex_let:D \tex_pageheight:D             \luatexpageheight
   \tex_let:D \luatex_pagerightoffset:D     \luatexpagerightoffset
-  \tex_let:D \pdftex_pagewidth:D           \luatexpagewidth
+  \tex_let:D \tex_pagewidth:D              \luatexpagewidth
   \tex_let:D \luatex_pardir:D              \luatexpardir
   \tex_let:D \luatex_rightghost:D          \luatexrightghost
   \tex_let:D \luatex_textdir:D             \luatextextdir
@@ -1322,11 +1317,11 @@
 % a couple of questionable decisions about that!
 %    \begin{macrocode}
 \tex_ifnum:D 0
-  \tex_ifdefined:D \pdftex_pdftexversion:D 1 \tex_fi:D
+  \tex_ifdefined:D \tex_pdftexversion:D 1 \tex_fi:D
   \tex_ifdefined:D \luatex_luatexversion:D 1 \tex_fi:D
     = 0 %
-  \tex_let:D \pdftex_mapfile:D \tex_undefined:D
-  \tex_let:D \pdftex_mapline:D \tex_undefined:D
+  \tex_let:D \tex_mapfile:D \tex_undefined:D
+  \tex_let:D \tex_mapline:D \tex_undefined:D
 \tex_fi:D
 %</package>
 %    \end{macrocode}
@@ -1349,13 +1344,13 @@
 \tex_fi:D
 %    \end{macrocode}
 % Up to v0.80, \LuaTeX{} defines the \pdfTeX{} version data: rather
-% confusing. Removing them means that \cs{pdftex_pdftexversion:D} is
+% confusing. Removing them means that \cs{tex_pdftexversion:D} is
 % a marker for \pdfTeX{} alone: useful in engine-dependent code later.
 %    \begin{macrocode}
 \tex_ifdefined:D \luatex_luatexversion:D
-  \tex_let:D \pdftex_pdftexbanner:D   \tex_undefined:D
-  \tex_let:D \pdftex_pdftexrevision:D \tex_undefined:D
-  \tex_let:D \pdftex_pdftexversion:D  \tex_undefined:D
+  \tex_let:D \tex_pdftexbanner:D   \tex_undefined:D
+  \tex_let:D \tex_pdftexrevision:D \tex_undefined:D
+  \tex_let:D \tex_pdftexversion:D  \tex_undefined:D
 \tex_fi:D
 %</initex|package>
 %    \end{macrocode}
@@ -1404,11 +1399,14 @@
 %    \begin{macrocode}
 %<*package>
 \tex_begingroup:D
+  \tex_long:D \tex_def:D \use_ii:nn #1#2 {#2}
+  \tex_long:D \tex_def:D \use_none:n #1 { }
   \tex_long:D \tex_def:D \@@_primitive:NN #1#2
     {
       \tex_ifdefined:D #1
-        \tex_global:D \tex_let:D #2 #1
+        \tex_expandafter:D \use_ii:nn
       \tex_fi:D
+        \use_none:n { \tex_global:D \tex_let:D #2 #1 }
     }
   \@@_primitive:NN \beginL                \etex_beginL:D
   \@@_primitive:NN \beginR                \etex_beginR:D
@@ -1477,6 +1475,164 @@
   \@@_primitive:NN \unexpanded            \etex_unexpanded:D
   \@@_primitive:NN \unless                \etex_unless:D
   \@@_primitive:NN \widowpenalties        \etex_widowpenalties:D
+  \@@_primitive:NN \pdfannot              \pdftex_pdfannot:D
+  \@@_primitive:NN \pdfcatalog            \pdftex_pdfcatalog:D
+  \@@_primitive:NN \pdfcompresslevel      \pdftex_pdfcompresslevel:D
+  \@@_primitive:NN \pdfcolorstack         \pdftex_pdfcolorstack:D
+  \@@_primitive:NN \pdfcolorstackinit     \pdftex_pdfcolorstackinit:D
+  \@@_primitive:NN \pdfcreationdate       \pdftex_pdfcreationdate:D
+  \@@_primitive:NN \pdfdecimaldigits      \pdftex_pdfdecimaldigits:D
+  \@@_primitive:NN \pdfdest               \pdftex_pdfdest:D
+  \@@_primitive:NN \pdfdestmargin         \pdftex_pdfdestmargin:D
+  \@@_primitive:NN \pdfendlink            \pdftex_pdfendlink:D
+  \@@_primitive:NN \pdfendthread          \pdftex_pdfendthread:D
+  \@@_primitive:NN \pdffontattr           \pdftex_pdffontattr:D
+  \@@_primitive:NN \pdffontname           \pdftex_pdffontname:D
+  \@@_primitive:NN \pdffontobjnum         \pdftex_pdffontobjnum:D
+  \@@_primitive:NN \pdfgamma              \pdftex_pdfgamma:D
+  \@@_primitive:NN \pdfimageapplygamma    \pdftex_pdfimageapplygamma:D
+  \@@_primitive:NN \pdfimagegamma         \pdftex_pdfimagegamma:D
+  \@@_primitive:NN \pdfgentounicode       \pdftex_pdfgentounicode:D
+  \@@_primitive:NN \pdfglyphtounicode     \pdftex_pdfglyphtounicode:D
+  \@@_primitive:NN \pdfhorigin            \pdftex_pdfhorigin:D
+  \@@_primitive:NN \pdfimagehicolor       \pdftex_pdfimagehicolor:D
+  \@@_primitive:NN \pdfimageresolution    \pdftex_pdfimageresolution:D
+  \@@_primitive:NN \pdfincludechars       \pdftex_pdfincludechars:D
+  \@@_primitive:NN \pdfinclusioncopyfonts
+    \pdftex_pdfinclusioncopyfonts:D
+  \@@_primitive:NN \pdfinclusionerrorlevel
+    \pdftex_pdfinclusionerrorlevel:D
+  \@@_primitive:NN \pdfinfo               \pdftex_pdfinfo:D
+  \@@_primitive:NN \pdflastannot          \pdftex_pdflastannot:D
+  \@@_primitive:NN \pdflastlink           \pdftex_pdflastlink:D
+  \@@_primitive:NN \pdflastobj            \pdftex_pdflastobj:D
+  \@@_primitive:NN \pdflastxform          \pdftex_pdflastxform:D
+  \@@_primitive:NN \pdflastximage         \pdftex_pdflastximage:D
+  \@@_primitive:NN \pdflastximagecolordepth
+    \pdftex_pdflastximagecolordepth:D
+  \@@_primitive:NN \pdflastximagepages    \pdftex_pdflastximagepages:D
+  \@@_primitive:NN \pdflinkmargin         \pdftex_pdflinkmargin:D
+  \@@_primitive:NN \pdfliteral            \pdftex_pdfliteral:D
+  \@@_primitive:NN \pdfminorversion       \pdftex_pdfminorversion:D
+  \@@_primitive:NN \pdfnames              \pdftex_pdfnames:D
+  \@@_primitive:NN \pdfobj                \pdftex_pdfobj:D
+  \@@_primitive:NN \pdfobjcompresslevel
+    \pdftex_pdfobjcompresslevel:D
+  \@@_primitive:NN \pdfoutline            \pdftex_pdfoutline:D
+  \@@_primitive:NN \pdfoutput             \pdftex_pdfoutput:D
+  \@@_primitive:NN \pdfpageattr           \pdftex_pdfpageattr:D
+  \@@_primitive:NN \pdfpagebox            \pdftex_pdfpagebox:D
+  \@@_primitive:NN \pdfpageref            \pdftex_pdfpageref:D
+  \@@_primitive:NN \pdfpageresources      \pdftex_pdfpageresources:D
+  \@@_primitive:NN \pdfpagesattr          \pdftex_pdfpagesattr:D
+  \@@_primitive:NN \pdfrefobj             \pdftex_pdfrefobj:D
+  \@@_primitive:NN \pdfrefxform           \pdftex_pdfrefxform:D
+  \@@_primitive:NN \pdfrefximage          \pdftex_pdfrefximage:D
+  \@@_primitive:NN \pdfrestore            \pdftex_pdfrestore:D
+  \@@_primitive:NN \pdfretval             \pdftex_pdfretval:D
+  \@@_primitive:NN \pdfsave               \pdftex_pdfsave:D
+  \@@_primitive:NN \pdfsetmatrix          \pdftex_pdfsetmatrix:D
+  \@@_primitive:NN \pdfstartlink          \pdftex_pdfstartlink:D
+  \@@_primitive:NN \pdfstartthread        \pdftex_pdfstartthread:D
+  \@@_primitive:NN \pdfsuppressptexinfo
+    \pdftex_pdfsuppressptexinfo:D
+  \@@_primitive:NN \pdfthread             \pdftex_pdfthread:D
+  \@@_primitive:NN \pdfthreadmargin       \pdftex_pdfthreadmargin:D
+  \@@_primitive:NN \pdftrailer            \pdftex_pdftrailer:D
+  \@@_primitive:NN \pdfuniqueresname      \pdftex_pdfuniqueresname:D
+  \@@_primitive:NN \pdfvorigin            \pdftex_pdfvorigin:D
+  \@@_primitive:NN \pdfxform              \pdftex_pdfxform:D
+  \@@_primitive:NN \pdfxformattr          \pdftex_pdfxformattr:D
+  \@@_primitive:NN \pdfxformname          \pdftex_pdfxformname:D
+  \@@_primitive:NN \pdfxformresources     \pdftex_pdfxformresources:D
+  \@@_primitive:NN \pdfximage             \pdftex_pdfximage:D
+  \@@_primitive:NN \pdfximagebbox         \pdftex_pdfximagebbox:D
+  \@@_primitive:NN \ifpdfabsdim           \pdftex_ifabsdim:D
+  \@@_primitive:NN \ifpdfabsnum           \pdftex_ifabsnum:D
+  \@@_primitive:NN \ifpdfprimitive        \pdftex_ifprimitive:D
+  \@@_primitive:NN \pdfadjustspacing      \pdftex_adjustspacing:D
+  \@@_primitive:NN \pdfcopyfont           \pdftex_copyfont:D
+  \@@_primitive:NN \pdfdraftmode          \pdftex_draftmode:D
+  \@@_primitive:NN \pdfeachlinedepth      \pdftex_eachlinedepth:D
+  \@@_primitive:NN \pdfeachlineheight     \pdftex_eachlineheight:D
+  \@@_primitive:NN \pdffilemoddate        \pdftex_filemoddate:D
+  \@@_primitive:NN \pdffilesize           \pdftex_filesize:D
+  \@@_primitive:NN \pdffirstlineheight    \pdftex_firstlineheight:D
+  \@@_primitive:NN \pdffontexpand         \pdftex_fontexpand:D
+  \@@_primitive:NN \pdffontsize           \pdftex_fontsize:D
+  \@@_primitive:NN \pdfignoreddimen       \pdftex_ignoreddimen:D
+  \@@_primitive:NN \pdfinsertht           \pdftex_insertht:D
+  \@@_primitive:NN \pdflastlinedepth      \pdftex_lastlinedepth:D
+  \@@_primitive:NN \pdflastxpos           \pdftex_lastxpos:D
+  \@@_primitive:NN \pdflastypos           \pdftex_lastypos:D
+  \@@_primitive:NN \pdfmapfile            \pdftex_mapfile:D
+  \@@_primitive:NN \pdfmapline            \pdftex_mapline:D
+  \@@_primitive:NN \pdfmdfivesum          \pdftex_mdfivesum:D
+  \@@_primitive:NN \pdfnoligatures        \pdftex_noligatures:D
+  \@@_primitive:NN \pdfnormaldeviate      \pdftex_normaldeviate:D
+  \@@_primitive:NN \pdfpageheight         \pdftex_pageheight:D
+  \@@_primitive:NN \pdfpagewidth          \pdftex_pagewidth:D
+  \@@_primitive:NN \pdfpkmode             \pdftex_pkmode:D
+  \@@_primitive:NN \pdfpkresolution       \pdftex_pkresolution:D
+  \@@_primitive:NN \pdfprimitive          \pdftex_primitive:D
+  \@@_primitive:NN \pdfprotrudechars      \pdftex_protrudechars:D
+  \@@_primitive:NN \pdfpxdimen            \pdftex_pxdimen:D
+  \@@_primitive:NN \pdfrandomseed         \pdftex_randomseed:D
+  \@@_primitive:NN \pdfsavepos            \pdftex_savepos:D
+  \@@_primitive:NN \pdfstrcmp             \pdftex_strcmp:D
+  \@@_primitive:NN \pdfsetrandomseed      \pdftex_setrandomseed:D
+  \@@_primitive:NN \pdfshellescape        \pdftex_shellescape:D
+  \@@_primitive:NN \pdftracingfonts       \pdftex_tracingfonts:D
+  \@@_primitive:NN \pdfuniformdeviate     \pdftex_uniformdeviate:D
+  \@@_primitive:NN \pdftexbanner          \pdftex_pdftexbanner:D
+  \@@_primitive:NN \pdftexrevision        \pdftex_pdftexrevision:D
+  \@@_primitive:NN \pdftexversion         \pdftex_pdftexversion:D
+  \@@_primitive:NN \efcode                \pdftex_efcode:D
+  \@@_primitive:NN \ifincsname            \pdftex_ifincsname:D
+  \@@_primitive:NN \leftmarginkern        \pdftex_leftmarginkern:D
+  \@@_primitive:NN \letterspacefont       \pdftex_letterspacefont:D
+  \@@_primitive:NN \lpcode                \pdftex_lpcode:D
+  \@@_primitive:NN \quitvmode             \pdftex_quitvmode:D
+  \@@_primitive:NN \rightmarginkern       \pdftex_rightmarginkern:D
+  \@@_primitive:NN \rpcode                \pdftex_rpcode:D
+  \@@_primitive:NN \synctex               \pdftex_synctex:D
+  \@@_primitive:NN \tagcode               \pdftex_tagcode:D
+  \@@_primitive:NN \mdfivesum             \pdftex_mdfivesum:D
+  \@@_primitive:NN \ifprimitive           \pdftex_ifprimitive:D
+  \@@_primitive:NN \primitive             \pdftex_primitive:D
+  \@@_primitive:NN \shellescape           \pdftex_shellescape:D
+  \@@_primitive:NN \adjustspacing         \pdftex_adjustspacing:D
+  \@@_primitive:NN \copyfont              \pdftex_copyfont:D
+  \@@_primitive:NN \draftmode             \pdftex_draftmode:D
+  \@@_primitive:NN \expandglyphsinfont    \pdftex_fontexpand:D
+  \@@_primitive:NN \ifabsdim              \pdftex_ifabsdim:D
+  \@@_primitive:NN \ifabsnum              \pdftex_ifabsnum:D
+  \@@_primitive:NN \ignoreligaturesinfont
+    \pdftex_ignoreligaturesinfont:D
+  \@@_primitive:NN \insertht              \pdftex_insertht:D
+  \@@_primitive:NN \lastsavedboxresourceindex
+    \pdftex_pdflastxform:D
+  \@@_primitive:NN \lastsavedimageresourceindex
+    \pdftex_pdflastximage:D
+  \@@_primitive:NN \lastsavedimageresourcepages
+    \pdftex_pdflastximagepages:D
+  \@@_primitive:NN \lastxpos              \pdftex_lastxpos:D
+  \@@_primitive:NN \lastypos              \pdftex_lastypos:D
+  \@@_primitive:NN \normaldeviate         \pdftex_normaldeviate:D
+  \@@_primitive:NN \outputmode            \pdftex_pdfoutput:D
+  \@@_primitive:NN \pageheight            \pdftex_pageheight:D
+  \@@_primitive:NN \pagewidth             \pdftex_pagewith:D
+  \@@_primitive:NN \protrudechars         \pdftex_protrudechars:D
+  \@@_primitive:NN \pxdimen               \pdftex_pxdimen:D
+  \@@_primitive:NN \randomseed            \pdftex_randomseed:D
+  \@@_primitive:NN \useboxresource        \pdftex_pdfrefxform:D
+  \@@_primitive:NN \useimageresource      \pdftex_pdfrefximage:D
+  \@@_primitive:NN \savepos               \pdftex_savepos:D
+  \@@_primitive:NN \saveboxresource       \pdftex_pdfxform:D
+  \@@_primitive:NN \saveimageresource     \pdftex_pdfximage:D
+  \@@_primitive:NN \setrandomseed         \pdftex_setrandomseed:D
+  \@@_primitive:NN \tracingfonts          \pdftex_tracingfonts:D
+  \@@_primitive:NN \uniformdeviate        \pdftex_uniformdeviate:D
 \tex_endgroup:D
 %</package>
 %    \end{macrocode}
