--- a/l3kernel/l3drivers.dtx
+++ b/l3kernel/l3drivers.dtx
@@ -740,7 +740,7 @@
   {
     \cs_if_exist:NTF \luatex_pdfextension:D
       { \luatex_pdfextension:D colorstack }
-      { \pdftex_pdfcolorstack:D }
+      { \tex_pdfcolorstack:D }
         \exp_not:N \l_@@_color_stack_int push {#1}
       \group_insert_after:N \exp_not:N \@@_color_reset:
   }
@@ -749,7 +749,7 @@
   {
     \cs_if_exist:NTF \luatex_pdfextension:D
       { \luatex_pdfextension:D colorstack }
-      { \pdftex_pdfcolorstack:D }
+      { \tex_pdfcolorstack:D }
         \exp_not:N \l_@@_color_stack_int pop \scan_stop:
   }
 %    \end{macrocode}
@@ -1351,7 +1351,7 @@
   {
     \cs_if_exist:NTF \luatex_pdfextension:D
       { \luatex_pdfextension:D literal }
-      { \pdftex_pdfliteral:D }
+      { \tex_pdfliteral:D }
         { \exp_not:N \exp_not:n {#1} }
   }
 \cs_generate_variant:Nn \@@_literal_pdf:n { x }
@@ -1365,13 +1365,13 @@
   {
     \cs_if_exist:NTF \luatex_pdfextension:D
       { \luatex_pdfextension:D save \scan_stop: }
-      { \pdftex_pdfsave:D }
+      { \tex_pdfsave:D }
   }
 \cs_new_protected:Npx \@@_scope_end:
   {
     \cs_if_exist:NTF \luatex_pdfextension:D
       { \luatex_pdfextension:D restore \scan_stop: }
-      { \pdftex_pdfrestore:D }
+      { \tex_pdfrestore:D }
   }
 %    \end{macrocode}
 % \end{macro}
@@ -1385,7 +1385,7 @@
   {
     \cs_if_exist:NTF \luatex_pdfextension:D
       { \luatex_pdfextension:D setmatrix }
-      { \pdftex_pdfsetmatrix:D }
+      { \tex_pdfsetmatrix:D }
         { \exp_not:N \exp_not:n {#1} }
   }
 \cs_generate_variant:Nn \@@_matrix:n { x }
@@ -1542,13 +1542,13 @@
   }
 %    \begin{macrocode}
 %   Measuring the image is done by boxing up: for PDF images we could
-%   use |\pdftex_pdfximagebbox:D|, but if doesn't work for other types.
+%   use |\tex_pdfximagebbox:D|, but if doesn't work for other types.
 %   As the box always starts at $(0,0)$ there is no need to worry about
 %   the lower-left position.
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_image_getbb_auxii:n #1
   {
-    \tex_immediate:D \pdftex_pdfximage:D
+    \tex_immediate:D \tex_pdfximage:D
       \bool_lazy_or:nnT
         { \l_image_interpolate_bool }
         { ! \tl_if_empty_p:N \l_image_decodearray_tl }
@@ -1567,11 +1567,11 @@
         { \l_image_pagebox_tl }
       {#1}
     \hbox_set:Nn \l_@@_tmp_box
-      { \pdftex_pdfrefximage:D \pdftex_pdflastximage:D }
+      { \tex_pdfrefximage:D \tex_pdflastximage:D }
     \dim_set:Nn \l_image_urx_dim { \box_wd:N \l_@@_tmp_box }
     \dim_set:Nn \l_image_ury_dim { \box_ht:N \l_@@_tmp_box }
     \int_const:cn { c_@@_image_ #1 \l_@@_image_attr_tl _int }
-      { \tex_the:D \pdftex_pdflastximage:D }
+      { \tex_the:D \tex_pdflastximage:D }
     \image_bb_save:x { #1 \l_@@_image_attr_tl }
   }
 %    \end{macrocode}
@@ -1586,7 +1586,7 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_image_include_jpg:n #1
   {
-    \pdftex_pdfrefximage:D
+    \tex_pdfrefximage:D
       \int_use:c { c_@@_image_ #1 \l_@@_image_attr_tl _int }
   }
 \cs_new_eq:NN \@@_image_include_pdf:n \@@_image_include_jpg:n
